# Token2049-Origins-Hack

./: .env.example  .gitignore  API_README.md  PROJECT_DOCUMENTATION.md  README.md  app.py  main.py  pyproject.toml  test_api.py
backend/: .env.example  .gitignore  hardhat.config.cjs  hardhat.config.js  package-lock.json  package.json  read.md  test.js  tsconfig.json
backend/contracts/: RiskAgentHedge.sol
backend/scripts/: deploy.cjs  deploy.mjs  generate-wallet-simple.mjs  generate-wallet.mjs
backend/src/: pool-monitor.ts  test-telegram.ts
frontend/: Dockerfile  deploy.sh  docker-compose.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/monitor/: page.tsx
frontend/app/risk-management/: page.tsx
frontend/components/: alert-panel.tsx  animated-value.tsx  pool-metrics.tsx  test-controls.tsx  wallet-provider.tsx
frontend/components/landing/: alert-showcase.tsx  cta.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navigation.tsx  stats.tsx
frontend/lib/: types.ts
frontend/src/: main.tsx
frontend/src/components/: ChatInterface.tsx  ChatInterfaceOld.tsx  Dashboard.tsx  DashboardOld.tsx  Layout.tsx  Navbar.tsx  RiskManagement.tsx  Settings.tsx
frontend/src/hooks/: useApi.ts  useWallet.ts
frontend/src/services/: api.ts
frontend/types/: pool.ts
src/agents/: blockchain_agent.py  search_agent.py  supervisor.py
src/tools/: blockchain_tools.py  search_tools.py
src/utils/: config.py  llm_factory.py
